# MC-Bottle

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Featurelist.txt  LICENSE  README.md  SECURITY.md  clang-format  clang-format.clang-format  conanfile.txt  contributing.md  cpp.hint  package-lock.json  package.json
Minecraft/net/minecraft/advancements/: Advancement.cpp  Advancement.h  AdvancementList.cpp  AdvancementList.h  AdvancementManager.cpp  AdvancementManager.h  AdvancementProgress.cpp  AdvancementProgress.h  AdvancementRewards.cpp  AdvancementRewards.h  AdvancementTreeNode.cpp  AdvancementTreeNode.h  CMakeLists.txt  CriteriaTriggers.cpp  CriteriaTriggers.h  Criterion.cpp  Criterion.h  CriterionProgress.cpp  CriterionProgress.h  DisplayInfo.cpp  DisplayInfo.h  FrameType.cpp  FrameType.h  FunctionManager.cpp  FunctionManager.h  ICriterionInstance.h  ICriterionTrigger.cpp  ICriterionTrigger.h  PlayerAdvancements.cpp  PlayerAdvancements.h
Minecraft/net/minecraft/client/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Minecraft/net/minecraft/command/: CMakeLists.txt  CommandException.cpp  CommandException.h  CommandResultStats.cpp  CommandResultStats.h  CommandResultStatsType.cpp  CommandResultStatsType.h  EntityNotFoundException.cpp  EntityNotFoundException.h  EntitySelector.cpp  EntitySelector.h  FunctionObject.cpp  FunctionObject.h  ICommand.h  ICommandListener.h  ICommandManager.h  ICommandSender.cpp  ICommandSender.h  InvalidBlockStateException.cpp  InvalidBlockStateException.h  NumberInvalidException.cpp  NumberInvalidException.h  PlayerNotFoundException.cpp  PlayerNotFoundException.h  SyntaxErrorException.cpp  SyntaxErrorException.h  WrongUsageException.cpp  WrongUsageException.h
Minecraft/net/minecraft/crash/: CMakeLists.txt  CrashReport.cpp  CrashReport.h  CrashReportCategory.cpp  CrashReportCategory.h  ICrashReportDetail.h
Minecraft/net/minecraft/creativetab/: CMakeLists.txt  CreativeTabs.cpp  CreativeTabs.h
Minecraft/net/minecraft/enchantment/: CMakeLists.txt  Enchantment.cpp  Enchantment.h  EnchantmentArrowDamage.cpp  EnchantmentArrowDamage.h  EnchantmentArrowFire.cpp  EnchantmentArrowFire.h  EnchantmentArrowInfinite.cpp  EnchantmentArrowInfinite.h  EnchantmentArrowKnockback.cpp  EnchantmentArrowKnockback.h  EnchantmentBindingCurse.cpp  EnchantmentBindingCurse.h  EnchantmentDamage.cpp  EnchantmentDamage.h  EnchantmentData.cpp  EnchantmentData.h  EnchantmentDigging.cpp  EnchantmentDigging.h  EnchantmentDurability.cpp  EnchantmentDurability.h  EnchantmentFireAspect.cpp  EnchantmentFireAspect.h  EnchantmentFishingSpeed.cpp  EnchantmentFishingSpeed.h  EnchantmentFrostWalker.cpp  EnchantmentFrostWalker.h  EnchantmentHelper.cpp  EnchantmentHelper.h  EnchantmentKnockback.cpp  EnchantmentKnockback.h  EnchantmentLootBonus.cpp  EnchantmentLootBonus.h  EnchantmentMending.cpp  EnchantmentMending.h  EnchantmentOxygen.cpp  EnchantmentOxygen.h  EnchantmentProtection.cpp  EnchantmentProtection.h  EnchantmentSweepingEdge.cpp  (+13 more)
Minecraft/net/minecraft/entity/: CMakeLists.txt  Entity.cpp  Entity.h  EntityAgeable.cpp  EntityAgeable.h  EntityAreaEffectCloud.cpp  EntityAreaEffectCloud.h  EntityBodyHelper.cpp  EntityBodyHelper.h  EntityCreature.cpp  EntityCreature.h  EntityFlying.cpp  EntityFlying.h  EntityHanging.cpp  EntityHanging.h  EntityLeashKnot.cpp  EntityLeashKnot.h  EntityList.cpp  EntityList.h  EntityLiving.cpp  EntityLiving.h  EntityLivingBase.cpp  EntityLivingBase.h  EntitySpawnPlacementRegistry.cpp  EntitySpawnPlacementRegistry.h  EntityTracker.cpp  EntityTracker.h  EntityTrackerEntry.cpp  EntityTrackerEntry.h  EnumCreatureAttribute.h  EnumCreatureType.cpp  EnumCreatureType.h  IEntityLivingData.h  IEntityMultiPart.h  IEntityOwnable.h  IJumpingMount.h  IMerchant.h  INpc.h  IProjectile.h  IRangedAttackMob.h  (+7 more)
Minecraft/net/minecraft/nbt/: CMakeLists.txt  CompressedStreamTools.cpp  CompressedStreamTools.h  NBTBase.cpp  NBTBase.h  NBTPrimitive.h  NBTSizeTracker.cpp  NBTSizeTracker.h  NBTTagByte.cpp  NBTTagByte.h  NBTTagByteArray.cpp  NBTTagByteArray.h  NBTTagCompound.cpp  NBTTagCompound.h  NBTTagDouble.cpp  NBTTagDouble.h  NBTTagEnd.cpp  NBTTagEnd.h  NBTTagFloat.cpp  NBTTagFloat.h  NBTTagInt.cpp  NBTTagInt.h  NBTTagIntArray.cpp  NBTTagIntArray.h  NBTTagList.cpp  NBTTagList.h  NBTTagLong.cpp  NBTTagLong.h  NBTTagLongArray.cpp  NBTTagLongArray.h  NBTTagShort.cpp  NBTTagShort.h  NBTTagString.cpp  NBTTagString.h  NBTUtil.cpp  NBTUtil.h
Minecraft/net/minecraft/network/: CMakeLists.txt
Minecraft/net/minecraft/pathfinding/: CMakeLists.txt  FlyingNodeProcessor.cpp  FlyingNodeProcessor.h  NodeProcessor.cpp  NodeProcessor.h  Path.cpp  Path.h  PathFinder.cpp  PathFinder.h  PathHeap.cpp  PathHeap.h  PathNavigate.cpp  PathNavigate.h  PathNavigateClimber.cpp  PathNavigateClimber.h  PathNavigateFlying.cpp  PathNavigateFlying.h  PathNavigateGround.cpp  PathNavigateGround.h  PathNavigateSwimmer.cpp  PathNavigateSwimmer.h  PathNodeType.cpp  PathNodeType.h  PathPoint.cpp  PathPoint.h  PathWorldListener.cpp  PathWorldListener.h  SwimNodeProcessor.cpp  SwimNodeProcessor.h  WalkNodeProcessor.cpp  WalkNodeProcessor.h
Minecraft/net/minecraft/potion/: CMakeLists.txt  Potion.cpp  Potion.h  PotionAbsorption.cpp  PotionAbsorption.h  PotionAttackDamage.cpp  PotionAttackDamage.h  PotionEffect.cpp  PotionEffect.h  PotionHealth.cpp  PotionHealth.h  PotionHealthBoost.cpp  PotionHealthBoost.h  PotionHelper.cpp  PotionHelper.h  PotionType.cpp  PotionType.h  PotionUtils.cpp  PotionUtils.h
Minecraft/net/minecraft/profiler/: CMakeLists.txt  ISnooperInfo.h  Profiler.cpp  Profiler.h  Snooper.cpp  Snooper.h
Minecraft/net/minecraft/realms/: CMakeLists.txt
Minecraft/net/minecraft/scoreboard/: CMakeLists.txt  IScoreCriteria.cpp  IScoreCriteria.h  Score.cpp  Score.h  ScoreCriteria.cpp  ScoreCriteria.h  ScoreCriteriaColored.cpp  ScoreCriteriaColored.h  Team.h  (+17 more)
concurrentqueue/: CMakeLists.txt  blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
pcg-cpp/: CMakeLists.txt
(+1114 files in other folders)
