file(GLOB_RECURSE source_list "*.cpp" "*.h" )
include(Flags)
add_library(stats STATIC ${source_list})
target_compile_features(stats PRIVATE cxx_std_20)
target_include_directories(stats PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
FLAGS(stats)
target_link_libraries(stats PRIVATE nbt util block spdlog dynamic_bitset)